--- a/src/app/pages/proveedores/proveedores.component.html
+++ b/src/app/pages/proveedores/proveedores.component.html
@@ -1,14 +1,13 @@
 <div class="flex">
   <a routerLink="/proveedores">
     <img
-      src="assets/img/volcano.png"
+      src="assets/img/licoreriaCocibolcaLogo.jpg"
       alt="Volcan Icon"
-      width="50"
-      height="50"
-      class="mr-2"
+      width="150"
+      class="mr-2 rounded-md"
     />
   </a>
-  <h1 class="my-auto">Listado de Proveedores</h1>
+  <h1 class="my-auto font-bold">Listado de Proveedores</h1>
 </div>
 <hr class="mt-2" />
 
