--- a/src/app/pages/proveedor/proveedor.component.html
+++ b/src/app/pages/proveedor/proveedor.component.html
@@ -16,18 +16,6 @@
 
 <hr class="mt-2" />
 
-<div class="text-right">
-  <button
-    (click)="onRegresar()"
-    class="mt-4"
-    mat-raised-button
-    color="warn"
-    type="button"
-  >
-    <i class="fa-sharp fa-solid fa-arrow-left-long"></i> Regresar
-  </button>
-</div>
-
 <form
   (ngSubmit)="guardar()"
   [formGroup]="forma"
@@ -35,79 +23,121 @@
   class="animate__animated animate__fadeIn"
   enctype="multipart/form-data"
 >
-  <div class="form mt-4 w-[600px]">
-    <!-- Input del ID -->
-    <mat-form-field *ngIf="esEdicion" class="w-full">
-      <input
-        type="text"
-        matInput
-        placeholder="ID"
-        formControlName="databaseId"
-        [(ngModel)]="proveedor.id"
-        readonly
-        [disabled]="true"
-      />
-      <mat-hint>Esto es un campo autogenerado por la DB</mat-hint>
-    </mat-form-field>
+  <!-- Div del formulario -->
+  <div class="form mt-4 flex justify-between">
+    <div class="w-[49%]">
+      <!-- Input del ID -->
+      <mat-form-field *ngIf="esEdicion" class="w-full">
+        <input
+          type="text"
+          matInput
+          placeholder="ID"
+          formControlName="databaseId"
+          [(ngModel)]="proveedor.id"
+          readonly
+          [disabled]="true"
+        />
+        <mat-hint>Esto es un campo autogenerado por la DB</mat-hint>
+      </mat-form-field>
 
-    <!-- Input del nombre -->
-    <mat-form-field class="w-full mb-4">
-      <mat-label>Nombre del Proveedor</mat-label>
-      <input
-        [(ngModel)]="proveedor.nombreProveedor"
-        type="text"
-        matInput
-        formControlName="nombreProveedor"
-      />
-      <mat-hint *ngIf="nombreNoValido" class="text-red-600"
-        >El campo requiere de 3 letras como mínimo
-        <i
-          class="fa-solid fa-triangle-exclamation fa-xl"
-          style="color: #ff0000"
-        ></i
-      ></mat-hint>
-    </mat-form-field>
+      <!-- Input del nombre -->
+      <mat-form-field class="w-full mb-4">
+        <mat-label>Nombre del Proveedor</mat-label>
+        <input
+          [(ngModel)]="proveedor.nombreProveedor"
+          type="text"
+          matInput
+          formControlName="nombreProveedor"
+        />
+        <mat-hint *ngIf="nombreNoValido" class="text-red-600"
+          >El campo requiere de 3 letras como mínimo
+          <i
+            class="fa-solid fa-triangle-exclamation fa-xl"
+            style="color: #ff0000"
+          ></i
+        ></mat-hint>
+      </mat-form-field>
 
-    <!-- Input del tipo de producto -->
-    <mat-form-field class="w-full mb-4">
-      <mat-label>Tipo del Producto</mat-label>
-      <input
-        [(ngModel)]="proveedor.tipoDeProducto"
-        type="text"
-        matInput
-        formControlName="tipoDeProducto"
-      />
-      <mat-hint *ngIf="tipoDeProductoNoValido" class="text-red-600"
-        >El campo requiere de 3 letras como mínimo
-        <i
-          class="fa-solid fa-triangle-exclamation fa-xl"
-          style="color: #ff0000"
-        ></i
-      ></mat-hint>
-    </mat-form-field>
+      <!-- Input del tipo de producto -->
+      <mat-form-field class="w-full mb-4">
+        <mat-label>Tipo del Producto</mat-label>
+        <input
+          [(ngModel)]="proveedor.tipoDeProducto"
+          type="text"
+          matInput
+          formControlName="tipoDeProducto"
+        />
+        <mat-hint *ngIf="tipoDeProductoNoValido" class="text-red-600"
+          >El campo requiere de 3 letras como mínimo
+          <i
+            class="fa-solid fa-triangle-exclamation fa-xl"
+            style="color: #ff0000"
+          ></i
+        ></mat-hint>
+      </mat-form-field>
 
-    <!-- Input para cargar la imagen -->
-    <div class="flex w-full mb-5">
-      <input
-        type="file"
-        class="hidden"
-        (change)="onFileSelected($event)"
-        #fileUpload
-      />
+      <!-- Input del estado -->
+      <p>Estado del Proveedor</p>
+      <div>
+        <button
+          *ngIf="proveedor.estado"
+          (click)="proveedor.estado = false"
+          type="button"
+          mat-raised-button
+          class="bg-green-500 w-80"
+        >
+          <i class="fa-regular fa-thumbs-up"></i> Activo
+        </button>
 
-      <div class="file-upload mr-2">
-        {{ fileName || messageNoneFile }}
+        <button
+          *ngIf="!proveedor.estado"
+          (click)="proveedor.estado = true"
+          type="button"
+          mat-raised-button
+          class="bg-red-500 w-80"
+        >
+          <i class="fa-regular fa-thumbs-down"></i> Inactivo
+        </button>
+      </div>
+    </div>
 
-        <!-- TODO componer la posicion de los iconos -->
+    <!-- Div donde se cargará la img -->
+    <div class="w-[49%] flex flex-col items-center justify-end">
+      <!-- Acá va la imagen que se cargará -->
+      <div class="h-full max-h-[200px]">
+        <img
+          *ngIf="!proveedor.logo"
+          src="assets/img/no-photo-available.png"
+          alt="No Image"
+          class="w-[230px] h-full"
+        />
+
+        <img
+          *ngIf="proveedor.logo"
+          [src]="ip + proveedor.logo"
+          alt="ProveedorImagen"
+          class="w-[230px] h-full"
+        />
+        <!-- Input para cargar la imagen -->
+        <input
+          type="file"
+          class="hidden"
+          (change)="onFileSelected($event)"
+          #fileUpload
+        />
+      </div>
+
+      <div class="file-upload w-full text-center">
         <button
           *ngIf="!proveedor.logo"
           mat-raised-button
           type="button"
           color="primary"
-          class="upload-btn text-center"
+          class="upload-btn text-center w-80 mt-2"
           (click)="fileUpload.click()"
         >
-          <i class="fa-solid fa-paperclip"></i>
+          {{ messageNoneFile }}
+          <i class="fa-solid fa-paperclip ml-4"></i>
         </button>
 
         <button
@@ -115,51 +145,52 @@
           mat-raised-button
           type="button"
           color="warn"
-          class="upload-btn text-center"
+          class="upload-btn text-center w-80 mt-2"
           (click)="[deleteResourceOnUnload(), (proveedor.logo = '')]"
         >
-          <i class="fa-solid fa-trash"></i>
+          {{ fileName || proveedor.logo }}
+          <i class="fa-solid fa-trash ml-4"></i>
         </button>
       </div>
-
-      <img
-        *ngIf="proveedor.logo"
-        [src]="ip + proveedor.logo"
-        alt="ProveedorImagen
-        "
-      />
     </div>
+  </div>
 
-    <!-- Input del estado -->
-    <div>
-      <p>Estado del Proveedor</p>
-      <br />
-      <button
-        *ngIf="proveedor.estado"
-        (click)="proveedor.estado = false"
-        type="button"
-        mat-raised-button
-        class="bg-green-500 w-[50%]"
-      >
-        <i class="fa-regular fa-thumbs-up"></i> Activo
-      </button>
+  <hr class="my-4" />
 
-      <button
-        *ngIf="!proveedor.estado"
-        (click)="proveedor.estado = true"
-        type="button"
-        mat-raised-button
-        class="bg-red-500 w-[50%]"
-      >
-        <i class="fa-regular fa-thumbs-down"></i> Inactivo
-      </button>
+  <!-- Div de los btn importantes -->
+  <div [ngSwitch]="statusSubmit" class="w-[50%] mt-10">
+    <!-- Botón para guardar el formulario -->
+    <button
+      mat-raised-button
+      color="accent"
+      type="submit"
+      class="w-[152px] mr-4"
+    >
+      <i class="fa-solid fa-floppy-disk"></i> Guardar
+    </button>
 
-      <hr class="my-4" />
+    <!-- Botón para regresar a la pagina principal -->
 
-      <!-- Botón para guardar el formulario -->
-      <button mat-raised-button color="accent" type="submit" class="w-full">
-        <i class="fa-solid fa-floppy-disk"></i> Guardar
-      </button>
-    </div>
+    <button
+      *ngSwitchCase="'noSubmit'"
+      (click)="onRegresar()"
+      class="w-[152px]"
+      mat-raised-button
+      color="warn"
+      type="button"
+    >
+      <i class="fa-sharp fa-solid fa-arrow-left-long"></i> Cancelar
+    </button>
+
+    <button
+      *ngSwitchCase="'submit'"
+      (click)="onRegresar()"
+      class="w-[152px]"
+      mat-raised-button
+      color="warn"
+      type="button"
+    >
+      <i class="fa-sharp fa-solid fa-arrow-left-long"></i> Regresar
+    </button>
   </div>
 </form>
