--- a/src/app/pages/proveedor-detalle/proveedor-detalle.component.html
+++ b/src/app/pages/proveedor-detalle/proveedor-detalle.component.html
@@ -106,3 +106,144 @@
     </tbody>
   </table>
 </div>
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<mat-form-field class="mt-10">
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input />
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="id">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>ID</th>
+    <td mat-cell *matCellDef="let producto">{{ producto.id }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombreProducto">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Nombre Producto
+    </th>
+    <td mat-cell *matCellDef="let producto">{{ producto.nombreProducto }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="cantidadAMano">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Cantidad a mano
+    </th>
+    <td mat-cell *matCellDef="let producto">{{ producto.cantidadAMano }}</td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="cantidadContada">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Cantidad contada
+    </th>
+    <td mat-cell *matCellDef="let producto">{{ producto.cantidadContada }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="presentacion">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Imagen de presentación
+    </th>
+    <td mat-cell *matCellDef="let producto">
+      <img
+        [src]="ipImg + producto.presentacion"
+        alt="noImage"
+        class="h-[50px] w-[50px] my-2"
+      />
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="fechaDeInventario">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Fecha de Inventario
+    </th>
+    <td mat-cell *matCellDef="let producto">
+      {{ producto.fechaDeInventario | date : "MMMM - dd - y" : " " : "es" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="nombreSupplier">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>Proveedor</th>
+    <td mat-cell *matCellDef="let producto">{{ producto.nombreSupplier }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="Herramientas">
+    <th class="text-neutral-50" mat-header-cell *matHeaderCellDef>
+      Herramientas
+    </th>
+    <td mat-cell *matCellDef="let producto; let i = index">
+      <div class="flex gap-x-4">
+        <button
+          [routerLink]="['/agregarProducto', producto.id]"
+          mat-raised-button
+          type="button"
+          class="bg-blue-500 mr-1"
+        >
+          <i class="fa-solid fa-pen"></i>
+        </button>
+
+        <!-- Aca este btn llevará a un componente que registre el historial de inventarios, se hará a futuro, por el momento solo
+           disparará una alerta con Swal -->
+        <button mat-raised-button type="button" class="bg-slate-500 mr-1">
+          <i class="fa-solid fa-list fa-lg"></i>
+        </button>
+
+        <!-- Aca hay que poner el evento click que elimine un producto de la base de datos -->
+        <button
+          (click)="deleteProducto(producto, i)"
+          mat-raised-button
+          type="button"
+          class="bg-red-500"
+        >
+          <i class="fa-sharp fa-solid fa-trash"></i>
+        </button>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr
+    class="bg-neutral-900"
+    mat-header-row
+    *matHeaderRowDef="displayedColumns"
+  ></tr>
+  <tr
+    class="animate__animated animate__fadeIn"
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+  ></tr>
+</table>
+<mat-paginator
+  class="mt-1"
+  [pageSizeOptions]="[1, 2, 3, 10, 20]"
+  length="10"
+  aria-label="Select page of periodic elements"
+>
+</mat-paginator>
+
+<mat-card
+  *ngIf="isLoading"
+  class="mt-4 bg-blue-200 text-center animate__animated animate__fadeIn"
+>
+  <mat-card-title>Cargando</mat-card-title>
+  <mat-card-content>
+    <i class="fa-solid fa-spinner fa-spin fa-6x my-2"></i>
+
+    <p>Espere por favor</p>
+  </mat-card-content>
+</mat-card>
+
+<mat-card
+  *ngIf="!isLoading && productos.length === 0"
+  class="mt-4 bg-yellow-200 text-center animate__animated animate__fadeIn"
+>
+  <mat-card-title>No hay registros</mat-card-title>
+  <mat-card-content>
+    <i class="fa-solid fa-exclamation fa-6x my-2"></i>
+  </mat-card-content>
+</mat-card>
+
+<div class="h-24"></div>
