--- a/src/app/pages/proveedores/proveedores.component.html
+++ b/src/app/pages/proveedores/proveedores.component.html
@@ -34,7 +34,7 @@
 
 <div
   *ngIf="!isLoading && proveedores.length > 0"
-  class="overflow-hidden animate__animated animate__fadeIn mt-3"
+  class="overflow-hidden animate__animated animate__fadeIn mt-3 shadow-lg shadow-slate-400"
 >
   <table class="min-w-full text-left text-sm font-light">
     <thead class="border-b font-medium bg-neutral-900 text-neutral-50">
