--- a/src/app/pages/proveedor-detalle/proveedor-detalle.component.html
+++ b/src/app/pages/proveedor-detalle/proveedor-detalle.component.html
@@ -10,6 +10,12 @@
   <div class="ml-4">
     <h1 class="my-auto font-bold">Agregar Producto nuevo</h1>
   </div>
+
+  <span class="flex-1"></span>
+
+  <button mat-raised-button class="bg-green-500" [routerLink]="['/home']">
+    <i class="fa-solid fa-house"></i> Home
+  </button>
 </div>
 <hr class="my-2" />
 
@@ -21,7 +27,7 @@
     color="accent"
     type="button"
   >
-    <i class="fa-sharp fa-solid fa-arrow-left-long"></i> Regresar a Proveedores
+    Proveedores
   </button>
 
   <button
