--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,15 @@
   <mat-card-content>
     <div class="flex justify-center my-10">
       <button
+        *ngIf="isAdmin"
+        mat-raised-button
+        color="primary"
+        class="h-40 w-40 bg-slate-500 mr-4 transition hover:-translate-y-1 hover:scale-110"
+        [routerLink]="['/listaUsuarios']"
+      >
+        Usuarios <i class="fa-solid fa-user fa-3x block"></i>
+      </button>
+      <button
         mat-raised-button
         color="primary"
         class="h-40 w-40 bg-slate-500 mr-4 transition hover:-translate-y-1 hover:scale-110"
